// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmplifyUi test render Container correctly 1`] = `
<div
  className="Section__container___3YYTG"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render FormContainer correctly 1`] = `
<div
  className="Form__formContainer___1GA3x"
/>
`;

exports[`AmplifyUi test render FormRow correctly 1`] = `
<div
  className="Form__formRow___2mwRs"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Input correctly 1`] = `
<input
  className="Input__input___3e_bf"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render InputRow correctly 1`] = `
<Component
  theme="theme"
>
  <input
    className="Input__input___3e_bf"
    style={Object {}}
  />
</Component>
`;

exports[`AmplifyUi test render Radio correctly 1`] = `
<input
  className="Input__radio___2hllK"
  style={Object {}}
  type="radio"
/>
`;

exports[`AmplifyUi test render RadioRow correctly 1`] = `
<Component
  theme="theme"
>
  <Component
    id="_undefined"
    theme="theme"
  />
  <Component
    htmlFor="_undefined"
    theme="theme"
  />
</Component>
`;

exports[`AmplifyUi test render SectionBody correctly 1`] = `
<div
  className="Section__sectionBody___ihqqd"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooter correctly 1`] = `
<div
  className="Section__sectionFooter___1T54C"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterPrimaryContent correctly 1`] = `
<span
  className="Section__sectionFooterPrimaryContent___2r9ZX"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionFooterSecondaryContent correctly 1`] = `
<span
  className="Section__sectionFooterPrimaryContent___2r9ZX"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SectionHeader correctly 1`] = `
<div
  className="Section__sectionHeader___2djyg"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render SectionHeaderContent correctly 1`] = `
<span
  className="Section__sectionHeaderContent___1UCqa"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render SelectInput correctly 1`] = `
<div
  className="SelectInput__selectInput___3efO4"
  style={Object {}}
/>
`;

exports[`AmplifyUi test render Strike correctly 1`] = `
<div
  className="Strike__strike___1XV1b"
  style={Object {}}
>
  <Component
    theme="theme"
  />
</div>
`;

exports[`AmplifyUi test render StrikeContent correctly 1`] = `
<span
  className="Strike__strikeContent___10gLb"
/>
`;
